--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "forever -w app.js & node scripts/watch-es6.js watch src/ & livereload"
   },
   "author": "Marc Wensauer <daslicht@ansolas.de>",
   "license": "ISC",
